--- a/Spring/스프링부트3백엔드개발자되기/springboot-developer/build.gradle
+++ b/Spring/스프링부트3백엔드개발자되기/springboot-developer/build.gradle
@@ -14,8 +14,14 @@ repositories { //의존성 라이브러리를 가져올 저장소 설정
 
 //프로젝트를 개발하면서 필요한 기능의 의존성을 입력하는 부분
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web' //웹 애플리케이션 개발에 필요한 스프링 부트 스타터 웹 의존성 추가
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'//웹 애플리케이션 개발에 필요한 스프링 부트 스타터 웹 의존성 추가
     testImplementation 'org.springframework.boot:spring-boot-starter-test' //테스트용 스프링 부트 스타터 테스트 의존성 추가
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' //JPA를 사용하기 위한 스프링 부트 스타터 데이터 JPA 의존성 추가
+
+    runtimeOnly 'com.h2database:h2' //인메모리 데이터베이스
+    compileOnly 'org.projectlombok:lombok' //롬복 라이브러리 추가
+    annotationProcessor 'org.projectlombok:lombok' //롬복 어노테이션 프로세서 추가
 }
 
 test {
