--- a/Spring/스프링부트3백엔드개발자되기_실습/sprintboot-developer/build.gradle
+++ b/Spring/스프링부트3백엔드개발자되기_실습/sprintboot-developer/build.gradle
@@ -14,6 +14,7 @@ repositories { //의존성 라이브러리를 가져올 저장소 설정
 
 //프로젝트를 개발하면서 필요한 기능의 의존성을 입력하는 부분
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' //타임리프 템플릿 엔진 의존성 추가
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'//웹 애플리케이션 개발에 필요한 스프링 부트 스타터 웹 의존성 추가
     testImplementation 'org.springframework.boot:spring-boot-starter-test' //테스트용 스프링 부트 스타터 테스트 의존성 추가
