--- a/Spring/스프링부트3백엔드개발자되기_실습/sprintboot-developer/build.gradle
+++ b/Spring/스프링부트3백엔드개발자되기_실습/sprintboot-developer/build.gradle
@@ -14,12 +14,16 @@ repositories { //의존성 라이브러리를 가져올 저장소 설정
 
 //프로젝트를 개발하면서 필요한 기능의 의존성을 입력하는 부분
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' //타임리프 템플릿 엔진 의존성 추가
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'//웹 애플리케이션 개발에 필요한 스프링 부트 스타터 웹 의존성 추가
-    testImplementation 'org.springframework.boot:spring-boot-starter-test' //테스트용 스프링 부트 스타터 테스트 의존성 추가
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa' //JPA를 사용하기 위한 스프링 부트 스타터 데이터 JPA 의존성 추가
-
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' //타임리프 템플릿 엔진 의존성 추가
+    implementation'org.springframework.boot:spring-boot-starter-security' //스프링 시큐리티 의존성 추가
+    implementation'org.thymeleaf.extras:thymeleaf-extras-springsecurity6' //타임리프와 스프링 시큐리티 통합 의존성 추가
+    implementation 'io.jsonwebtoken:jjwt:0.9.1' //JWT 라이브러리 의존성 추가
+    implementation 'javax.xml.bind:jaxb-api:2.3.1' //XML 문서와 Java 객체 간 매핑 자동화
+    testImplementation 'org.springframework.boot:spring-boot-starter-test' //테스트용 스프링 부트 스타터 테스트 의존성 추가
+    testImplementation 'org.springframework.security:spring-security-test' //스프링 시큐리티 테스트 의존성 추가
     runtimeOnly 'com.h2database:h2' //인메모리 데이터베이스
     compileOnly 'org.projectlombok:lombok' //롬복 라이브러리 추가
     annotationProcessor 'org.projectlombok:lombok' //롬복 어노테이션 프로세서 추가
